RESOLVED FIXED53400
[Qt][WK2]REGRESSION (r76991): Fix build errors
https://bugs.webkit.org/show_bug.cgi?id=53400
Summary [Qt][WK2]REGRESSION (r76991): Fix build errors
Csaba Osztrogonác
Reported 2011-01-30 10:59:15 PST
31 #ifdef __cplusplus 32 #define new ("if you use new/delete make sure to include config.h at the top of the file"()) 33 #define delete ("if you use new/delete make sure to include config.h at the top of the file"()) This change caused build error in moc_qwkhistory.cpp and moc_qwkpage.cpp . These files are generated from qwkhistory.h and qwkpage.h by Qt's moc and they only inlcude its own header file. To fix this build break I added including config.h to these headers: http://trac.webkit.org/changeset/77088 I know we shouldn't include config.h in headers, but I don't know if it is possible to make moc add including config.h to moc_[...].cpp files. I leave this bug open to find a correct solution for this build break.
Attachments
Patch (3.40 KB, patch)
2011-01-30 11:58 PST, Balazs Kelemen
no flags
Csaba Osztrogonác
Comment 1 2011-01-30 11:16:56 PST
Adding Source/JavascriptCore to INCLUDEPATH was needed, because config.h includes 3 headears from wtf: - wtf/FastMalloc.h - wtf/DisallowCType.h - wtf/Platform.h
Balazs Kelemen
Comment 2 2011-01-30 11:50:20 PST
The correct solution is to throw away the prefix header let trust in ourselves and check-webkit-style to not forget about config.h. This is our policy in WebCore and JavaScriptCore as well.
Balazs Kelemen
Comment 3 2011-01-30 11:58:37 PST
Balazs Kelemen
Comment 4 2011-01-30 12:25:43 PST
Comment on attachment 80597 [details] Patch Clearing flags on attachment: 80597 Committed r77092: <http://trac.webkit.org/changeset/77092>
Balazs Kelemen
Comment 5 2011-01-30 12:25:50 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.