Source/WebKit2/UIProcess/API/qt/qwkhistory.h
@@ -25,7 +25,6 @@
 #ifndef qwkhistory_h
 #define qwkhistory_h
 
-#include "config.h"
 #include "qwebkitglobal.h"
 #include <QObject>
 #include <QSharedData>
