Source/WebKit2/UIProcess/API/qt/qwkpage.h
@@ -1,7 +1,6 @@
 #ifndef qwkpage_h
 #define qwkpage_h
 
-#include "config.h"
 #include "qwebkitglobal.h"
 #include <QAction>
 #include <QObject>
