Source/WebKit2/WebKit2.pro
@@ -170,9 +170,6 @@ symbian {
     INCLUDEPATH = $$WEBKIT2_INCLUDEPATH $$INCLUDEPATH
 }
 
-PREFIX_HEADER = $$PWD/../WebKit2/WebKit2Prefix.h
-*-g++*:QMAKE_CXXFLAGS += "-include $$PREFIX_HEADER"
-
 WEBKIT2_GENERATED_HEADERS = \
     $$WEBKIT2_GENERATED_SOURCES_DIR/AuthenticationManagerMessages.h \
     $$WEBKIT2_GENERATED_SOURCES_DIR/DownloadProxyMessages.h \
